# ailang_cli

./: .gitignore  Cargo.toml  README.md  debug_inputs
ailang_cli/: Cargo.toml
ailang_core/: Cargo.toml
ailang_core/src/: app_runtime.rs  artifact.rs  backward.rs  capability.rs  dataset.rs  diagnostic.rs  error.rs  execute_kernel.rs  forward.rs  forward_selected.rs  gradcheck.rs  input_spec.rs  ir.rs  lib.rs  model.rs  optim.rs  param.rs  reshape_spec.rs  rng.rs  runtime.rs  state_machine.rs  tensor.rs
ailang_core/src/device/: cpu_device.rs  gpu_kernels.rs  mod.rs  wgpu_device.rs
ailang_core/src/frontend/: lexer.rs  lower.rs  mod.rs  parser.rs
ailang_core/tests/: app_runtime_tests.rs  capability_test.rs  control_flow_tests.rs  dataset_jsonl_tests.rs  dataset_pipeline_tests.rs  dataset_tests.rs  easy_loops_tests.rs  easy_syntax_tests.rs  eval_block_tests.rs  file_read_capability_test.rs  frontend_tests.rs  function_tests.rs  input_validation_test.rs  loop_limits_tests.rs  loop_semantics_tests.rs  loop_tests.rs  model_io_contract_test.rs  model_tests.rs  ops_pack1_tests.rs  ops_tests.rs  reshape_export_test.rs  sanity_files_exist_test.rs  selective_eval_capability_test.rs  selective_execution_trace_test.rs  state_machine_tests.rs  training_loop_tests.rs
ailangd/: Cargo.toml
docs/: language-reference.md  language_reference.md  runtime.md  security.md  stdlib.md
examples/: app_demo.ail  easy_loops.ail  easy_minimal.ail  easy_train.ail  loop_example.ail  loops_collect.ail  loops_train_safe.ail  minimal.ail  op_sanity.ail  reduce_example.ail  stdlib_infer.ail  (+7 more)
(+23 files in other folders)
