[package]
name = "ailang_core"
version = "0.1.0"
edition = "2021"

[features]
default = []
gpu = []
gpu-wgpu = ["gpu", "wgpu", "pollster", "bytemuck"]

[dependencies]
ndarray = "0.15"
rand = "0.8"
rand_chacha = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# GPU dependencies (feature-gated)
wgpu = { version = "0.20", optional = true }
pollster = { version = "0.3", optional = true }
bytemuck = { version = "1.16", optional = true }
tempfile = "3.8"
